portico: Fix portico footer broken on mobile widths.
I am not sure why I added this change in flex-direction
but right now, it doesn't seem to be correct since it force
the footer to overflow mobile width.

--- a/web/styles/portico/portico.css
+++ b/web/styles/portico/portico.css
@@ -458,10 +458,6 @@ input.text-error {
     .footer-section ul {
         margin: 0;
     }
-
-    @media (width <= 500px) {
-        flex-direction: column;
-    }
 }
 
 /* -- end new footer -- */
